--- a/templates/results.html
+++ b/templates/results.html
@@ -12,12 +12,14 @@
     <p>City A: {{ comparison_result.city_a.name }}</p>
     <p>AQI: {{ comparison_result.city_a.aqi }}</p>
     <p>UV: {{ comparison_result.city_a.uv }}</p>
-    <p>Score: {{comparison_result.city_a.score}}</p>
+    <p>Transit Score :{{comparison_result.city_a.Walkability}}</p>
+    <p>Transit Score: {{comparison_result.city_a.score}}</p>
 </div>
 <div class="cityB">
     <p>City B: {{ comparison_result.city_b.name }}</p>
     <p>AQI: {{ comparison_result.city_b.aqi }}</p>
     <p>UV: {{ comparison_result.city_b.uv }}</p>
+    <p>Walkability Score :{{comparison_result.city_b.Walkability}}</p>
     <p>UrbanPulse Score: {{comparison_result.city_b.score}}</p>
 </div>
 </body>
@@ -34,7 +36,7 @@
 p {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
-    font-size: 22px;
+    font-size: 16px;
     color: white;
 }
 
