--- a/templates/results.html
+++ b/templates/results.html
@@ -13,7 +13,7 @@
     <p>AQI: {{ comparison_result.city_a.aqi }}</p>
     <p>UV: {{ comparison_result.city_a.uv }}</p>
     <p>Transit Score :{{comparison_result.city_a.Walkability}}</p>
-    <p>Transit Score: {{comparison_result.city_a.score}}</p>
+    <p>UrbanPulse Score: {{comparison_result.city_a.score}}</p>
 </div>
 <div class="cityB">
     <p>City B: {{ comparison_result.city_b.name }}</p>
